# GFTuiHelper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
csrc/: pybind.cpp
csrc/component/: input_form.cpp  menu_loop.cpp  resizable_split_block.cpp
csrc/include/: bind.hpp  tui_tool_sets.hpp  tui_tool_sets_runable.hpp  utils.hpp
csrc/runable/: diff.cpp  menu_loop.cpp  print_matrix.cpp
include/: tui_tool_sets.hpp  tui_tool_sets_runable.hpp  utils.hpp
src/tui_helper/: __init__.py
src/tui_helper/matrix/: __init__.py
src/tui_helper/menu/: main.py
tests/: CMakeLists.txt  test_3block.cpp  test_dropdown.cpp  test_print_matrix.cpp  tui_main.cpp
